feat: Implementação do tratamento de exceções para retornar mensagem de erro padrão.